tests/spec/fail/map_has_wrong_arity.aja
m = {"a": 1}
print(m.has())
